--- a/opencv12test1/opencv12test1.vcxproj
+++ b/opencv12test1/opencv12test1.vcxproj
@@ -153,6 +153,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="D:\FYP\Sources\FlannMatching.cpp" />
+    <ClCompile Include="ExtractFeatures.cpp" />
+    <ClCompile Include="FeatureMatchingMain.cpp" />
+    <ClCompile Include="HistogramMatching.cpp" />
+    <ClCompile Include="MatchHistograms.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FeatureMatching.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
