match keypoint implemented

--- a/opencv12test1/opencv12test1.vcxproj.filters
+++ b/opencv12test1/opencv12test1.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="ExtractFeatures.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MatchHistograms.cpp">
+    <ClCompile Include="MatchKeypoints.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
