--- a/opencv12test1/opencv12test1.vcxproj
+++ b/opencv12test1/opencv12test1.vcxproj
@@ -143,12 +143,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>D:\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>D:\opencv\build\x64\vc12;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -156,7 +158,7 @@
     <ClCompile Include="ExtractFeatures.cpp" />
     <ClCompile Include="FeatureMatchingMain.cpp" />
     <ClCompile Include="HistogramMatching.cpp" />
-    <ClCompile Include="MatchHistograms.cpp" />
+    <ClCompile Include="MatchKeypoints.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FeatureMatching.h" />
